# backend/generated/src/openapi_server/apis/default_api_base.py
@@ -2,9 +2,12 @@
 
 from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
-from pydantic import StrictBool, StrictStr
-from typing import Any, Optional
+from pydantic import StrictBool, StrictInt, StrictStr
+from typing import Any, List, Optional
+from openapi_server.models.course_info import CourseInfo
+from openapi_server.models.get_course_reviews200_response import GetCourseReviews200Response
 from openapi_server.models.get_courses200_response import GetCourses200Response
+from openapi_server.models.teacher import Teacher
 
 
 class BaseDefaultApi:
@@ -13,6 +16,20 @@ class BaseDefaultApi:
     def __init_subclass__(cls, **kwargs):
         super().__init_subclass__(**kwargs)
         BaseDefaultApi.subclasses = BaseDefaultApi.subclasses + (cls,)
+    async def get_course(
+        self,
+        id: StrictInt,
+    ) -> CourseInfo:
+        ...
+
+
+    async def get_course_reviews(
+        self,
+        id: StrictInt,
+    ) -> GetCourseReviews200Response:
+        ...
+
+
     async def get_courses(
         self,
         only_available: Optional[StrictBool],
@@ -21,4 +38,11 @@ class BaseDefaultApi:
         high_teacher_rating: Optional[StrictBool],
         text_query: Optional[StrictStr],
     ) -> GetCourses200Response:
+        ...
+
+
+    async def get_teachers(
+        self,
+        query: Optional[StrictStr],
+    ) -> List[Teacher]:
         ...
